SF-Integration-Destination/force-app/main/default/objects/RFX_Integration_Log__c/RFX_Integration_Log__c.object-meta.xml
<CustomObject>
    <label>RFX Integration Log</label>
    <nameField>
        <displayFormat>RIL-{0000}</displayFormat>
        <label>RFX Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFX Integration Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>