SF-Integration-Destination/force-app/main/default/objects/RFX_Integration_Log__c/fields/Alternative_Question__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Alternative Question</label>
    <referenceTo>avnio__ResponseQuestion__c</referenceTo>
    <relationshipLabel>RFX Integration Logs</relationshipLabel>
    <relationshipName>RFX_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>