SF-Integration-Destination/force-app/main/default/objects/RFX_Integration_Log__c/fields/Response_Tag__c.field-meta.xml
<CustomField>
    <fullName>Response_Tag__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Response Tag</label>
    <referenceTo>avnio__ResponseTag__c</referenceTo>
    <relationshipLabel>RFX Integration Logs</relationshipLabel>
    <relationshipName>RFX_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>