SF-Integration-Destination/force-app/main/default/objects/RFX_Integration_Log__c/fields/RFX_Integration_Batch__c.field-meta.xml
<CustomField>
    <fullName>RFX_Integration_Batch__c</fullName>
    <label>RFX Integration Batch</label>
    <referenceTo>RFX_Integration_Batch__c</referenceTo>
    <relationshipLabel>RFX Integration Logs</relationshipLabel>
    <relationshipName>RFX_Integration_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>