SF-Integration-Destination/force-app/main/default/objects/RFX_Integration_Log__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tag</label>
    <referenceTo>avnio__Tag__c</referenceTo>
    <relationshipLabel>RFX Integration Logs</relationshipLabel>
    <relationshipName>RFX_Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>